@@ -915,6 +915,14 @@
                 </md>and we see that indeed <m>\alpha\vect{x}\in Z</m>.  With the three conditions of <xref ref="theorem-TSS" acro="TSS"/> fulfilled, we can conclude that <m>Z</m> is a subspace of <m>\complex{3}</m>.</p>
             </solution>
         </exercise>
+        <exercise number="M40" xml:id="exercise-S-M40">
+            <statement>
+                <p>This section claims that the union of two subspaces is not always a subspace.  Construct an example of two subspaces where you can prove that the set union is not a subspace.  Once you have such an example, see if you can create another that is as <q>small</q> and as <q>simple</q> as possible</p>.
+            </statement>
+            <solution xml:id="solution-S-M40">
+                <p>Create two subspaces of <m>\complex{2}</m>, each as the span of a single nonzero vector.  Simply ensure that the two vectors chosen are not scalar multiples of each other.  Then the sum of these two vectors is not contained in the union of the two subspaces (this needs an argument), and so the set union fails <xref ref="property-AC"/> and is not a subspace.</p>
+            </solution>
+        </exercise>
         <exercise number="T20" xml:id="exercise-S-T20">
             <statement>
                 <p>A square matrix <m>A</m> of size <m>n</m> is upper triangular if <m>\matrixentry{A}{ij}=0</m> whenever <m>i\gt j</m>.  Let <m>UT_n</m> be the set of all upper triangular matrices of size <m>n</m>.  Prove that <m>UT_n</m> is a subspace of the vector space of all square matrices of size <m>n</m>, <m>M_{nn}</m>.</p>
